@@ -4002,6 +4002,8 @@ enum : uint16_t
 
     STR_CHEAT_REMOVE_PARK_FENCES = 6593,
 
+    STR_SHORTCUT_TOGGLE_WALL_SLOPE = 6594,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
